--- a/HaloAxis/appsettings.json
+++ b/HaloAxis/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=HaloAxis;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
+  "Jwt": {
+    "validIssuer": "RealWorldAPI",
+    "validAudience": "http://localhost:5000",
+    "expires": 120,
+    "Key": "HaloAxis-LetsGrowTogether"
+  },
+    "AllowedHosts": "*"
+  }
