Done User login , Registration, Token based authentication, refresh token

--- a/HaloAxis/appsettings.json
+++ b/HaloAxis/appsettings.json
@@ -6,14 +6,14 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=HaloAxis;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=KAMRUL\\SQLEXPRESS;Database=HaloAxis;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
-  "Jwt": {
-    "validIssuer": "RealWorldAPI",
-    "validAudience": "http://localhost:5000",
+  "JwtSettings": {
+    "validIssuer": "RealWordAPI",
+    "validAudience": "https://localhost:7280",
     "expires": 120,
-    "Key": "HaloAxis-LetsGrowTogether"
+    "key": "ThisIsA32CharactersLongSecretKey!"
   },
-    "AllowedHosts": "*"
-  }
+  "AllowedHosts": "*"
+}
